--- a/css/style.css
+++ b/css/style.css
@@ -278,6 +278,9 @@ body {
 	margin-left: 20%;
 	margin-right: 20%;
 }
+.entrada p {
+	font-size: 1.3em!important;
+}
 .navbar {
     padding: 1.1rem 5.5rem!important;
 }
@@ -359,5 +362,8 @@ h2.title {
 }
 .contenido p {
 	font-size: 1.5em!important;
+}
+.entrada p {
+	font-size: 2em!important;
 }
 }
